# beautyspot

./: .coverage  .cruft.json  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  :memory:  :memory:-shm  :memory:-wal  AGENTS.md  CLAUDE.md  GEMINI.md  LOADMAP.md  Makefile  PHILOSOPHY.md  README.md  index.html  mkdocs.yml  objects.inv  plan.md  pyproject.toml  sitemap.xml  test-esm.mjs  test_doorstop.py  test_mermaid.html  test_sync_save_error.py
.claude/: REVIEW.md  ~CLAUDE.md
.github/workflows/: release.yml
ROADMAP/: index.html
adr/0000-adr-example/: index.html
adr/0001-stable-argument-hashing/: index.html
adr/0002-robust-rate-limiter/: index.html
adr/0003-resilient-deserializeation-and-versioning/: index.html
adr/0004-io-executor-lifecyle-management/: index.html
adr/0005-dashboard-interaction-model/: index.html
cookbooks/: index.html
docs/: ARCHITECTURE.md  ROADMAP.md  index.md  philosophy.md  quality_report.md
philosophy/: index.html
quality_report/: index.html
scripts/: bump_version.py
search/: search_index.json
tests/: README.md  conftest.py  test_cache_policy.py  test_cached_run.py  test_cachekey.py  test_cachekey_schema_change.py  test_cli.py  test_context_manager.py  test_core.py  test_core_default.py  test_core_register.py  test_core_run.py  test_db.py  test_delete.py  test_di.py  test_edge_cases.py  test_features.py  test_guardrails.py  test_limiter.py  test_security.py  test_serializer.py  test_utils.py  test_workspace.py
tools/: analyze_design.py  analyze_structure.py  generate_claude_ref.py  generate_report.py
(+531 files in other folders)
