[project]
name = "beautyspot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Neel Bauman", email = "neel.bauman@example.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
beautyspot = "beautyspot:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
