[project]
name = "beautyspot"
version = "0.3.0"
description = "Make your functions beautiful with beauty spots."
readme = "README.md"
authors = [
    { name = "Neel Bauman", email = "neel.bauman@example.com" }
]
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
all = [
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
    "boto3>=1.34.0",
    "graphviz>=0.20.1",
]
s3 = [
    "boto3>=1.34.0",
]
dashboard = [
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
    "graphviz>=0.20.1",
]



[project.scripts]
beautyspot = "beautyspot.cli:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/beautyspot"]

